user-role and room sample bulid

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-    <%= yield %>
+      <div id="flash-message">
+        <% flash.each do |message_type, message| %>
+          <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+        <% end %>
+      </div>
+      <%= yield %>
     </div>
   </body>
 </html>
