--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,4 @@
-<div id="message">
-<%= message.content %>
-</div>
+<%= message.user.name %>
+<li id="message" class="list-group-item">
+  <%= message.content %>
+</li>
