--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,17 @@
 <header class="navbar navbar-fixed-top navbar-default">
-<div class="container">
-  <%= link_to "LetsChat", root_path, id: "logo" %>
-  <ul class="nav navbar-nav pull-right">
-    <% if user_sign_in? %>
-      <li><%= link_to "Log Out", log_out_path, method: "delete" %></li>
-    <% else %>
-      <li><%= link_to "Sign Up", sign_up_path %></li>
-      <li><%= link_to "Sign In", sign_in_path %></li>
-    <% end %>
-  </ul>
-</div>
+  <div class="container">
+    <%= link_to "LetsChat", root_path, id: "logo" %>
+    <ul class="nav navbar-nav">
+      <li><%= link_to "Rooms", rooms_path %></li>
+    </ul>
+    <ul class="nav navbar-nav pull-right">
+      <% if user_sign_in? %>
+        <li><%= link_to "Log Out", log_out_path, method: "delete" %></li>
+      <% else %>
+        <li><%= link_to "Sign Up", sign_up_path %></li>
+        <li><%= link_to "Sign In", sign_in_path %></li>
+      <% end %>
+    </ul>
+  </div>
 </header>
 
