--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="col-md-3">
-    <%= link_to new_room_path, class: 'btn btn-primary' do %>
+    <%= link_to new_room_path, class: 'btn btn-primary', remote: true do %>
       <span class="glyphicon glyphicon-plus">Create your chatting room.</span>
     <% end %>
   </div>
