use active job with sidekiq adapter

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,23 +1,5 @@
 <% if message.user == current_user %>
-  <div style="margin-bottom: 10px">
-    <li id="message" style="list-style: none;">
-      <span style="float: right">
-      <%= image_tag(message.user.avatar_url, width: 42) %>
-      </span>
-      <span class="list-group-item list-group-item-info" style="width: 75%; margin-left: 150px " >
-        <%= message.content %>
-      </span>
-    </li>
-  </div>
+  <%= render 'messages/current_user_message', message: message %>
 <% else %>
-  <div style="margin-bottom: 10px">
-    <%= message.user.name %>
-    <li id="message" style="list-style: none;">
-      <%= image_tag(message.user.avatar_url, width: 42) %>
-      <span class="list-group-item" style="width: 85%; float: right; margin-right: 80px;" >
-        <%= message.content %>
-      </span>
-    </li>
-  </div>
+  <%= render 'messages/other_user_message', message: message %>
 <% end %>
-
