ajax in the room list page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <div id="flash-message">
-        <% flash.each do |message_type, message| %>
-          <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-        <% end %>
+        <%= render 'layouts/flash_message' %>
       </div>
       <%= yield %>
     </div>
