--- a/app/views/rooms/_room_list.html.erb
+++ b/app/views/rooms/_room_list.html.erb
@@ -2,9 +2,9 @@
   <% rooms.each do |room| %>
     <li class="list-group-item">
       <%= link_to room.name, room_path(room) %>
-      <% if room.owner.id == current_user.id %>
-        <%= link_to room_path(room), method: :delete, remote: true, onclick: "confirm('Are you sure to delete?')" do %>
-          <span style="float: right" class="glyphicon glyphicon-trash"></span>
+      <% unless room.users.include?(current_user) %>
+        <%= link_to room_path(room), remote: true, onclick: "confirm('Are you sure to delete?')" do %>
+          <span style="float: right" class="glyphicon glyphicon-plus"></span>
         <% end %>
       <% end %>
     </li>
