--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,17 @@
     </ul>
     <ul class="nav navbar-nav pull-right">
       <% if user_sign_in? %>
+      <li><%= current_user.name %></li>
         <li><%= link_to "Log Out", log_out_path, method: "delete" %></li>
+        <li>
+        <%= link_to notifications_path do %>
+          <span class="glyphicon glyphicon-bell" id="notices" data-channel="notices">
+            <% if unread_notify_count != 0 %>
+              <%= unread_notify_count %>
+            <% end %>
+          </span>
+        <% end %>
+        </li>
       <% else %>
         <li><%= link_to "Sign Up", sign_up_path %></li>
         <li><%= link_to "Sign In", sign_in_path %></li>
@@ -14,4 +24,3 @@
     </ul>
   </div>
 </header>
-
