--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,3 +1,6 @@
+<script type="text/javascript" charset="utf-8">
+Window.current_user_id = <%= current_user.id %>
+</script>
 <div class="row">
   <div class="col-md-3">
     <div class="panel panel-default">
