--- a/app/views/notifications/_deal_rooms.html.erb
+++ b/app/views/notifications/_deal_rooms.html.erb
@@ -1,16 +1,5 @@
-<script type="text/javascript" charset="utf-8">
-$(function(){
-  $("#accept").on("click", function() {
-    $.post("/accept_join/<%=notification.id%>",function(result) {
-      if (result.message === "success") {
-        $(this).parent().attr("style", "display:none;");
-      }
-    })
-  });
-});
-</script>
 <% unless notification.solved? %>
   <span style="float: right" id="deal-room">
-    <%= link_to 'Accept', accept_join_path(notification), class: "btn btn-primary", id: "accept" %>
+    <%= link_to 'Accept', accept_join_path(notification), class: "btn btn-primary", remote: true %>
   </span>
 <% end %>
