--- a/app/views/rooms/_room_user_list.html.erb
+++ b/app/views/rooms/_room_user_list.html.erb
@@ -6,7 +6,7 @@
         <span style="float: right" class="glyphicon glyphicon-user"></span>
       <% else %>
         <% if room.owner.id == current_user.id %>
-          <%= link_to remove_member_room_path(id: room.id, user_id: user.id), method: :delete, remote: true do %>
+          <%= link_to remove_member_room_path(id: room.id, user_id: user.id), method: :delete, remote: true, data: { confirm: "Are you sure to remove the user from this room?" } do %>
             <span style="float: right" class="glyphicon glyphicon-minus"></span>
           <% end %>
         <% end %>
