--- a/app/views/rooms/add_member.js.erb
+++ b/app/views/rooms/add_member.js.erb
@@ -1,2 +1,3 @@
 $('#room-user-list').html("<%= escape_javascript(render('rooms/room_user_list', room: @room)) %>")
+$("#flash-message").html("<%= escape_javascript(render('layouts/flash_message'))%>");
 $('#addMember').html("<%= escape_javascript(render('rooms/add_member', room: @room)) %>")
