--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -3,19 +3,13 @@ Place all the styles related to the matching controller here.
 They will automatically be included in application.css.
  */
 
-.user-message .user-avatar{
-  float: right;
-}
-.user-message .user-name{
-  display: none;
-}
-.user-message #user-message-content{
+.current-user-message{
   width: 75%;
-  margin-right: 11px;
-  color: #31708f;
-  background-color: #d9edf7;
+  margin-left: 150px;
 }
 
 .common{
-  width: 85%; float: right; margin-right: 70px;
+  width: 85%;
+  float: right;
+  margin-right: 70px;
 }
